Fixes #350 and Fixes #351 - header spacing issues

--- a/assets/scss/generic-overrides.scss
+++ b/assets/scss/generic-overrides.scss
@@ -150,9 +150,7 @@
 .nhsuk-search__submit {
   margin-left : 0;
 }
-.nhsuk-header__search-toggle {
-  margin-right: nhsuk-spacing(1);
-}
+
 #secondary {
   section.widget_search {
 	background    : none;
