--- a/style.css
+++ b/style.css
@@ -10992,10 +10992,6 @@ textarea:focus, #login #loginform .user-login:focus, #login #loginform .user_pas
   margin-left: 0;
 }
 
-.nhsuk-header__search-toggle {
-  margin-right: 4px;
-}
-
 #secondary section.widget_search {
   background: none;
   padding-left: 0;
@@ -11227,7 +11223,6 @@ a:focus .nhsuk-icon {
   background-color: #f0f4f5;
   border-color: #005eb8;
   color: #005eb8;
-  margin-right: 4px;
 }
 
 .nhsuk-header.nhsuk-header--white .nhsuk-header__search-toggle .nhsuk-icon__search {
@@ -11297,9 +11292,10 @@ a:focus .nhsuk-icon {
 @media (max-width: 769px) {
   .nhsuk-header.nhsuk-header--transactional .nhsuk-header__logo {
     padding: 10px;
+    padding-left: 0;
   }
   .nhsuk-header.nhsuk-header--transactional .nhsuk-header__transactional-service-name {
-    padding: 10px 10px 22px 10px;
+    padding: 10px 10px 22px 0px;
   }
 }
 
@@ -11536,7 +11532,10 @@ span.search-terms {
 }
 
 button {
-  margin-right: 16px;
+  margin: 0;
+}
+
+button + .button {
   margin-left: 16px;
 }
 
